// Vitest Snapshot v1

exports[`Message > Message baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="button-demo"
    data-v-e60c559e=""
    style="margin: 0px 16px;"
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-e60c559e=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        纯文字的通知
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-e60c559e=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带图标的通知
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-e60c559e=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带关闭的通知
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-e60c559e=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        可滚动的通知
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-e60c559e=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带按钮的通知
        
      </span>
      <!---->
    </button>
  </div>
  <!-- 纯文字通知 -->
  <!--v-if-->
  <!-- 带图标通知 -->
  <!--v-if-->
  <!-- 带关闭通知 -->
  <!--v-if-->
  <!-- 滚动通知 -->
  <!--v-if-->
  <!-- 带按钮通知 -->
  <!--v-if-->
  
</div>
`;

exports[`Message > Message mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Message 消息通知
  </h1>
  <p
    class="summary"
    style="margin: 8px 16px 0px;"
  >
    用于轻量级反馈或提示，不会打断用户操作。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        消息通知内容为文本、带操作按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="button-demo"
        data-v-e60c559e=""
        style="margin: 0px 16px;"
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-e60c559e=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            纯文字的通知
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-e60c559e=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带图标的通知
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-e60c559e=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带关闭的通知
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-e60c559e=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            可滚动的通知
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-e60c559e=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带按钮的通知
            
          </span>
          <!---->
        </button>
      </div>
      <!-- 纯文字通知 -->
      <!--v-if-->
      <!-- 带图标通知 -->
      <!--v-if-->
      <!-- 带关闭通知 -->
      <!--v-if-->
      <!-- 滚动通知 -->
      <!--v-if-->
      <!-- 带按钮通知 -->
      <!--v-if-->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件风格
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        消息组件风格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="button-demo"
        data-v-fba28ece=""
        style="margin: 0px 16px;"
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-fba28ece=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            普通通知
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-fba28ece=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            成功通知
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-fba28ece=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            警示通知
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-fba28ece=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            错误通知
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Message > Message themeVue demo works fine 1`] = `
<div
  class="button-demo"
  data-v-fba28ece=""
  style="margin: 0px 16px;"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-fba28ece=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      普通通知
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-fba28ece=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      成功通知
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-fba28ece=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      警示通知
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-fba28ece=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      错误通知
      
    </span>
    <!---->
  </button>
</div>
`;
